[gd_scene load_steps=15 format=3 uid="uid://dvohxg0ev8883"]

[ext_resource type="Script" path="res://Games/ShapeEscape/Levels/Scripts/ShapeEscapeLevel.gd" id="1_6jrne"]
[ext_resource type="Texture2D" uid="uid://bmstmc77gxydo" path="res://Sprites/Placeholders/32x32_colored_squares.png" id="2_7fmhu"]
[ext_resource type="PackedScene" uid="uid://brl37acgm6ybb" path="res://Games/ShapeEscape/Entities/player.tscn" id="2_oy4ix"]
[ext_resource type="Texture2D" uid="uid://cwhqlxt65s0b5" path="res://Sprites/Placeholders/32x32_colored_squares_no_border.png" id="3_4qv6v"]
[ext_resource type="Theme" uid="uid://dg1o84ii4oypn" path="res://Themes/Main.tres" id="5_7jbix"]
[ext_resource type="FontFile" uid="uid://bjo5c1e2g1vt6" path="res://Fonts/Kenney Blocks.ttf" id="5_u3mci"]

[sub_resource type="TileMapPattern" id="TileMapPattern_4myo3"]
tile_data = PackedInt32Array(0, 262145, 0, 65536, 327681, 0, 131072, 262145, 0, 196608, 327681, 0, 1, 327681, 0, 65537, 262145, 0, 131073, 327681, 0, 196609, 262145, 0, 2, 262145, 0, 65538, 327681, 0, 131074, 262145, 0, 196610, 327681, 0, 3, 327681, 0, 65539, 262145, 0, 131075, 327681, 0, 196611, 262145, 0)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0wrui"]
texture = ExtResource("2_7fmhu")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_44an8"]
texture = ExtResource("3_4qv6v")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0

[sub_resource type="TileSet" id="TileSet_4cpr8"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_0wrui")
sources/1 = SubResource("TileSetAtlasSource_44an8")
pattern_0 = SubResource("TileMapPattern_4myo3")

[sub_resource type="CircleShape2D" id="CircleShape2D_k26tk"]
radius = 2.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w2qth"]
texture = ExtResource("2_7fmhu")
texture_region_size = Vector2i(32, 32)
use_texture_padding = false
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0

[sub_resource type="TileSet" id="TileSet_gob4c"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_w2qth")

[sub_resource type="LabelSettings" id="LabelSettings_11mwi"]
font = ExtResource("5_u3mci")
font_size = 48
font_color = Color(0, 0, 0, 1)
outline_size = 16

[node name="ShapeEscapeLevel" type="Node2D"]
script = ExtResource("1_6jrne")

[node name="Background" type="TileMap" parent="."]
tile_set = SubResource("TileSet_4cpr8")
cell_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(0, 262145, 0, 65536, 327681, 0, 131072, 262145, 0, 196608, 327681, 0, 1, 327681, 0, 65537, 262145, 0, 131073, 327681, 0, 196609, 262145, 0, 2, 262145, 0, 65538, 327681, 0, 131074, 262145, 0, 196610, 327681, 0, 3, 327681, 0, 65539, 262145, 0, 131075, 327681, 0, 196611, 262145, 0, 262144, 262145, 0, 327680, 327681, 0, 393216, 262145, 0, 458752, 327681, 0, 262145, 327681, 0, 327681, 262145, 0, 393217, 327681, 0, 458753, 262145, 0, 262146, 262145, 0, 327682, 327681, 0, 393218, 262145, 0, 458754, 327681, 0, 262147, 327681, 0, 327683, 262145, 0, 393219, 327681, 0, 458755, 262145, 0, 524288, 262145, 0, 589824, 327681, 0, 655360, 262145, 0, 720896, 327681, 0, 524289, 327681, 0, 589825, 262145, 0, 655361, 327681, 0, 720897, 262145, 0, 524290, 262145, 0, 589826, 327681, 0, 655362, 262145, 0, 720898, 327681, 0, 524291, 327681, 0, 589827, 262145, 0, 655363, 327681, 0, 720899, 262145, 0, 786432, 262145, 0, 851968, 327681, 0, 917504, 262145, 0, 786433, 327681, 0, 851969, 262145, 0, 917505, 327681, 0, 786434, 262145, 0, 851970, 327681, 0, 917506, 262145, 0, 786435, 327681, 0, 851971, 262145, 0, 917507, 327681, 0, 4, 262145, 0, 65540, 327681, 0, 131076, 262145, 0, 196612, 327681, 0, 5, 327681, 0, 65541, 262145, 0, 131077, 327681, 0, 196613, 262145, 0, 6, 262145, 0, 65542, 327681, 0, 131078, 262145, 0, 196614, 327681, 0, 7, 327681, 0, 65543, 262145, 0, 131079, 327681, 0, 196615, 262145, 0, 262148, 262145, 0, 327684, 327681, 0, 393220, 262145, 0, 458756, 327681, 0, 262149, 327681, 0, 327685, 262145, 0, 393221, 327681, 0, 458757, 262145, 0, 262150, 262145, 0, 327686, 327681, 0, 393222, 262145, 0, 458758, 327681, 0, 262151, 327681, 0, 327687, 262145, 0, 393223, 327681, 0, 458759, 262145, 0, 524292, 262145, 0, 589828, 327681, 0, 655364, 262145, 0, 720900, 327681, 0, 524293, 327681, 0, 589829, 262145, 0, 655365, 327681, 0, 720901, 262145, 0, 524294, 262145, 0, 589830, 327681, 0, 655366, 262145, 0, 720902, 327681, 0, 524295, 327681, 0, 589831, 262145, 0, 655367, 327681, 0, 720903, 262145, 0, 786436, 262145, 0, 851972, 327681, 0, 917508, 262145, 0, 786437, 327681, 0, 851973, 262145, 0, 917509, 327681, 0, 786438, 262145, 0, 851974, 327681, 0, 917510, 262145, 0, 786439, 327681, 0, 851975, 262145, 0, 917511, 327681, 0, 8, 262145, 0, 65544, 327681, 0, 131080, 262145, 0, 196616, 327681, 0, 9, 327681, 0, 65545, 262145, 0, 131081, 327681, 0, 196617, 262145, 0, 10, 262145, 0, 65546, 327681, 0, 131082, 262145, 0, 196618, 327681, 0, 11, 327681, 0, 65547, 262145, 0, 131083, 327681, 0, 196619, 262145, 0, 262152, 262145, 0, 327688, 327681, 0, 393224, 262145, 0, 458760, 327681, 0, 262153, 327681, 0, 327689, 262145, 0, 393225, 327681, 0, 458761, 262145, 0, 262154, 262145, 0, 327690, 327681, 0, 393226, 262145, 0, 458762, 327681, 0, 262155, 327681, 0, 327691, 262145, 0, 393227, 327681, 0, 458763, 262145, 0, 524296, 262145, 0, 589832, 327681, 0, 655368, 262145, 0, 720904, 327681, 0, 524297, 327681, 0, 589833, 262145, 0, 655369, 327681, 0, 720905, 262145, 0, 524298, 262145, 0, 589834, 327681, 0, 655370, 262145, 0, 720906, 327681, 0, 524299, 327681, 0, 589835, 262145, 0, 655371, 327681, 0, 720907, 262145, 0, 786440, 262145, 0, 851976, 327681, 0, 917512, 262145, 0, 786441, 327681, 0, 851977, 262145, 0, 917513, 327681, 0, 786442, 262145, 0, 851978, 327681, 0, 917514, 262145, 0, 786443, 327681, 0, 851979, 262145, 0, 917515, 327681, 0, 12, 262145, 0, 65548, 327681, 0, 131084, 262145, 0, 196620, 327681, 0, 13, 327681, 0, 65549, 262145, 0, 131085, 327681, 0, 196621, 262145, 0, 14, 262145, 0, 65550, 327681, 0, 131086, 262145, 0, 196622, 327681, 0, 15, 327681, 0, 65551, 262145, 0, 131087, 327681, 0, 196623, 262145, 0, 262156, 262145, 0, 327692, 327681, 0, 393228, 262145, 0, 458764, 327681, 0, 262157, 327681, 0, 327693, 262145, 0, 393229, 327681, 0, 458765, 262145, 0, 262158, 262145, 0, 327694, 327681, 0, 393230, 262145, 0, 458766, 327681, 0, 262159, 327681, 0, 327695, 262145, 0, 393231, 327681, 0, 458767, 262145, 0, 524300, 262145, 0, 589836, 327681, 0, 655372, 262145, 0, 720908, 327681, 0, 524301, 327681, 0, 589837, 262145, 0, 655373, 327681, 0, 720909, 262145, 0, 524302, 262145, 0, 589838, 327681, 0, 655374, 262145, 0, 720910, 327681, 0, 524303, 327681, 0, 589839, 262145, 0, 655375, 327681, 0, 720911, 262145, 0, 786444, 262145, 0, 851980, 327681, 0, 917516, 262145, 0, 786445, 327681, 0, 851981, 262145, 0, 917517, 327681, 0, 786446, 262145, 0, 851982, 327681, 0, 917518, 262145, 0, 786447, 327681, 0, 851983, 262145, 0, 917519, 327681, 0, 16, 262145, 0, 65552, 327681, 0, 131088, 262145, 0, 196624, 327681, 0, 17, 327681, 0, 65553, 262145, 0, 131089, 327681, 0, 196625, 262145, 0, 18, 262145, 0, 65554, 327681, 0, 131090, 262145, 0, 196626, 327681, 0, 19, 327681, 0, 65555, 262145, 0, 131091, 327681, 0, 196627, 262145, 0, 262160, 262145, 0, 327696, 327681, 0, 393232, 262145, 0, 458768, 327681, 0, 262161, 327681, 0, 327697, 262145, 0, 393233, 327681, 0, 458769, 262145, 0, 262162, 262145, 0, 327698, 327681, 0, 393234, 262145, 0, 458770, 327681, 0, 262163, 327681, 0, 327699, 262145, 0, 393235, 327681, 0, 458771, 262145, 0, 524304, 262145, 0, 589840, 327681, 0, 655376, 262145, 0, 720912, 327681, 0, 524305, 327681, 0, 589841, 262145, 0, 655377, 327681, 0, 720913, 262145, 0, 524306, 262145, 0, 589842, 327681, 0, 655378, 262145, 0, 720914, 327681, 0, 524307, 327681, 0, 589843, 262145, 0, 655379, 327681, 0, 720915, 262145, 0, 786448, 262145, 0, 851984, 327681, 0, 917520, 262145, 0, 786449, 327681, 0, 851985, 262145, 0, 917521, 327681, 0, 786450, 262145, 0, 851986, 327681, 0, 917522, 262145, 0, 786451, 327681, 0, 851987, 262145, 0, 917523, 327681, 0)

[node name="Player" parent="." instance=ExtResource("2_oy4ix")]

[node name="Obstacles" type="Node2D" parent="."]

[node name="WinArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinArea"]
shape = SubResource("CircleShape2D_k26tk")

[node name="Foreground" type="TileMap" parent="."]
tile_set = SubResource("TileSet_gob4c")
cell_quadrant_size = 32
format = 2

[node name="ForegroundObstacles" type="Node2D" parent="."]

[node name="LevelWonCanvas" type="CanvasLayer" parent="."]
visible = false

[node name="GameOverLabel" type="Label" parent="LevelWonCanvas"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 75.0
grow_horizontal = 2
theme = ExtResource("5_7jbix")
text = "Level Won"
label_settings = SubResource("LabelSettings_11mwi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="LevelWonCanvas"]
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.38
anchor_right = 0.6
anchor_bottom = 0.48
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_7jbix")
text = "Continue"

[node name="ReplayButton" type="Button" parent="LevelWonCanvas"]
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.52
anchor_right = 0.6
anchor_bottom = 0.62
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_7jbix")
text = "Replay"

[node name="QuitButton" type="Button" parent="LevelWonCanvas"]
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.66
anchor_right = 0.6
anchor_bottom = 0.76
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_7jbix")
text = "Quit"

[node name="GameOverCanvas" type="CanvasLayer" parent="."]
visible = false

[node name="GameOverLabel" type="Label" parent="GameOverCanvas"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 75.0
grow_horizontal = 2
theme = ExtResource("5_7jbix")
text = "Game Over"
label_settings = SubResource("LabelSettings_11mwi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RetryButton" type="Button" parent="GameOverCanvas"]
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.38
anchor_right = 0.6
anchor_bottom = 0.48
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_7jbix")
text = "Retry"

[node name="QuitButton" type="Button" parent="GameOverCanvas"]
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.52
anchor_right = 0.6
anchor_bottom = 0.62
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_7jbix")
text = "Quit"

[connection signal="hit_wall" from="Player" to="." method="_on_player_hit_wall"]
[connection signal="area_entered" from="WinArea" to="." method="_on_win_area_area_entered"]
[connection signal="pressed" from="LevelWonCanvas/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="LevelWonCanvas/ReplayButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="LevelWonCanvas/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="GameOverCanvas/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="GameOverCanvas/QuitButton" to="." method="_on_quit_button_pressed"]
